feat(recommendations): return personal recommendations with main cover media ID