@@ -14,6 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -26,6 +27,7 @@ public class RecommendationsService {
     private static final int RECENT_HISTORY_LIMIT = 20;
     private static final int MIN_RECOMMENDATIONS_REQUIRED = 3;
     private static final double RECENT_ACTIVITY_BONUS = 0.5;
+
     private static final List<FallbackWindow> POPULARITY_WINDOWS = List.of(
             new FallbackWindow(Duration.ofDays(7), "popular_7d"),
             new FallbackWindow(Duration.ofDays(30), "popular_30d"),
@@ -35,48 +37,69 @@ public class RecommendationsService {
     private final TitlePublicQueryApi titlePublicQueryApi;
     private final UserInteractionApi userInteractionRepository;
 
+    private static int countOverlap(Set<UUID> left, Set<UUID> right) {
+        Set<UUID> smaller = left.size() < right.size() ? left : right;
+        Set<UUID> larger = left.size() < right.size() ? right : left;
+
+        int overlap = 0;
+        for (var tagId : smaller) {
+            if (larger.contains(tagId)) {
+                overlap++;
+            }
+        }
+        return overlap;
+    }
+
     public List<PersonalRecommendationResponse> getPersonalRecommendations(UUID userId, int limit) {
         var normalizedLimit = Math.clamp(limit, 1, MAX_RECOMMENDATIONS_LIMIT);
+
         var viewedTitleIds = getRecentViewedTitleIds(userId);
-        var excludedTitleIds = new LinkedHashSet<>(viewedTitleIds);
-        var personalizedRecommendations = getPersonalizedRecommendations(viewedTitleIds, normalizedLimit);
-        var result = new ArrayList<>(personalizedRecommendations);
+        var excludedTitleIds = new HashSet<>(viewedTitleIds);
 
-        excludedTitleIds.addAll(result.stream()
-                .map(PersonalRecommendationResponse::titleId)
-                .toList());
+        // Получить персонализированные рекомендации
+        List<ScoredRecommendation> recommendations = new ArrayList<>(
+                getPersonalizedRecommendations(viewedTitleIds, excludedTitleIds, normalizedLimit)
+        );
 
-        if (result.size() < normalizedLimit) {
-            result.addAll(getPopularFallbackRecommendations(
+        boolean hasPersonalized = !recommendations.isEmpty();
+
+        // Если не хватает рекомендаций, то добить популярными
+        if (recommendations.size() < normalizedLimit) {
+            // Добавить персонализированные в исключения, чтобы не дублировать в фоллбеках
+            recommendations.forEach(r -> excludedTitleIds.add(r.titleId()));
+
+            recommendations.addAll(getPopularFallbackRecommendations(
                     excludedTitleIds,
-                    normalizedLimit - result.size()
+                    normalizedLimit - recommendations.size()
             ));
         }
 
-        // Keep recommendations hidden on cold-start when we cannot build a minimally useful list.
-        if (personalizedRecommendations.isEmpty()
-                && result.size() < Math.min(normalizedLimit, MIN_RECOMMENDATIONS_REQUIRED)) {
+        // Проверка на холодный старт
+        if (!hasPersonalized && recommendations.size() < Math.min(normalizedLimit, MIN_RECOMMENDATIONS_REQUIRED)) {
             return Collections.emptyList();
         }
 
-        return result;
+        // Наполнить данными о тайтлах
+        return enrichWithTitleInfo(recommendations);
     }
 
-    private List<PersonalRecommendationResponse> getPersonalizedRecommendations(List<UUID> viewedTitleIds, int limit) {
+    private List<ScoredRecommendation> getPersonalizedRecommendations(List<UUID> viewedTitleIds,
+                                                                      Set<UUID> excludedTitleIds,
+                                                                      int limit) {
         if (viewedTitleIds.isEmpty()) {
             return Collections.emptyList();
         }
 
-        var tagsByViewedTitleId = titlePublicQueryApi.getTitleTagIdsByIds(viewedTitleIds);
+        var tagIdsOfViewedTitles = titlePublicQueryApi.getTitleTagIdsByIds(viewedTitleIds);
         var seedTitleIds = viewedTitleIds.stream()
-                .filter(titleId -> !tagsByViewedTitleId.getOrDefault(titleId, Set.of()).isEmpty())
+                .filter(titleId -> !tagIdsOfViewedTitles.getOrDefault(titleId, Collections.emptySet()).isEmpty())
                 .toList();
 
         if (seedTitleIds.isEmpty()) {
             return Collections.emptyList();
         }
 
-        var excludedTitleIds = new LinkedHashSet<>(viewedTitleIds);
+        // Найди тайтлы с похожими тегами, но НЕ из черного списка
         var candidateIds = userInteractionRepository.findRecommendedTitleIdsBySharedTags(
                 seedTitleIds,
                 new ArrayList<>(excludedTitleIds),
@@ -87,156 +110,114 @@ public class RecommendationsService {
             return Collections.emptyList();
         }
 
+        // Все теги, которые нравятся пользователю
         var seedTagIds = seedTitleIds.stream()
-                .flatMap(titleId -> tagsByViewedTitleId.getOrDefault(titleId, Set.of()).stream())
+                .flatMap(titleId -> tagIdsOfViewedTitles.getOrDefault(titleId, Collections.emptySet()).stream())
                 .collect(Collectors.toSet());
-        var mostRecentTagIds = tagsByViewedTitleId.getOrDefault(seedTitleIds.getFirst(), Set.of());
+
+        var mostRecentTagIds = tagIdsOfViewedTitles.getOrDefault(seedTitleIds.getFirst(), Collections.emptySet());
         var candidateTagIds = titlePublicQueryApi.getTitleTagIdsByIds(candidateIds);
 
-        var scoredCandidates = candidateIds.stream()
+        return candidateIds.stream()
                 .filter(candidateId -> !excludedTitleIds.contains(candidateId))
-                .map(candidateId -> {
-                    var tags = candidateTagIds.getOrDefault(candidateId, Set.of());
-                    var overlap = countOverlap(tags, seedTagIds);
-
-                    if (overlap == 0) {
-                        return null;
-                    }
-
-                    var hasRecentOverlap = hasOverlap(tags, mostRecentTagIds);
-                    var score = overlap + (hasRecentOverlap ? RECENT_ACTIVITY_BONUS : 0.0);
-                    return new ScoredRecommendation(candidateId, score, "tag_overlap");
-                })
+                .map(candidateId -> scoreCandidate(
+                                candidateId,
+                                candidateTagIds.getOrDefault(candidateId, Collections.emptySet()),
+                                seedTagIds,
+                                mostRecentTagIds
+                        )
+                )
                 .filter(Objects::nonNull)
-                .sorted((left, right) -> {
-                    var scoreComparison = Double.compare(right.score(), left.score());
-                    if (scoreComparison != 0) {
-                        return scoreComparison;
-                    }
-                    return left.titleId().compareTo(right.titleId());
-                })
+                // Сортировка по максимальному баллу и ID
+                .sorted(Comparator.comparingDouble(ScoredRecommendation::score).reversed()
+                        .thenComparing(ScoredRecommendation::titleId))
                 .limit(limit)
-                .toList();
-
-        if (scoredCandidates.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        var titleInfoById = titlePublicQueryApi.getTitleShortInfoByIds(scoredCandidates.stream()
-                        .map(ScoredRecommendation::titleId)
-                        .toList())
-                .stream()
-                .collect(Collectors.toMap(TitleShortInfo::id, titleInfo -> titleInfo));
-
-        return scoredCandidates.stream()
-                .map(scored -> {
-                    var titleInfo = titleInfoById.get(scored.titleId());
-                    if (titleInfo == null) {
-                        return null;
-                    }
-                    return new PersonalRecommendationResponse(
-                            titleInfo.id(),
-                            titleInfo.name(),
-                            titleInfo.slug(),
-                            scored.score(),
-                            scored.reason()
-                    );
-                })
-                .filter(Objects::nonNull)
                 .toList();
     }
 
-    private List<PersonalRecommendationResponse> getPopularFallbackRecommendations(Set<UUID> excludedTitleIds, int limit) {
-        if (limit <= 0) {
-            return List.of();
+    private ScoredRecommendation scoreCandidate(UUID candidateId,
+                                                Set<UUID> candidateTags,
+                                                Set<UUID> seedTags,
+                                                Set<UUID> recentTags) {
+        // Количество общих тегов у кандидата и всей истории пользователя
+        int overlap = countOverlap(candidateTags, seedTags);
+        if (overlap == 0) {
+            return null;
         }
 
-        var fallbackByTitle = new LinkedHashMap<UUID, ScoredRecommendation>();
+        boolean hasRecentOverlap = !Collections.disjoint(candidateTags, recentTags);
+        // 1 общий тег = 1 балл. Плюс бонус 0.5, если похоже на последнее прочитанное
+        double score = overlap + (hasRecentOverlap ? RECENT_ACTIVITY_BONUS : 0.0);
+
+        return new ScoredRecommendation(candidateId, score, "tag_overlap");
+    }
+
+    private List<ScoredRecommendation> getPopularFallbackRecommendations(Set<UUID> excludedTitleIds, int limit) {
+        if (limit <= 0) {
+            return Collections.emptyList();
+        }
+
+        List<ScoredRecommendation> fallbacks = new ArrayList<>();
+        Instant now = Instant.now();
 
         for (var window : POPULARITY_WINDOWS) {
-            var remaining = limit - fallbackByTitle.size();
+            int remaining = limit - fallbacks.size();
             if (remaining <= 0) {
                 break;
             }
 
             var topViews = userInteractionRepository.findTopViewedTitlesSince(
-                    Instant.now().minus(window.duration()),
+                    now.minus(window.duration()),
                     remaining * 3
             );
 
             for (var topView : topViews) {
-                var titleId = topView.getTitleId();
-                if (excludedTitleIds.contains(titleId) || fallbackByTitle.containsKey(titleId)) {
-                    continue;
-                }
-
-                fallbackByTitle.put(
-                        titleId,
-                        new ScoredRecommendation(titleId, topView.getWeeklyViews().doubleValue(), window.reason())
-                );
-
-                if (fallbackByTitle.size() >= limit) {
-                    break;
+                UUID titleId = topView.getTitleId();
+                // Мутировать excludedTitleIds напрямую, чтобы избежать дублей между окнами
+                if (excludedTitleIds.add(titleId)) {
+                    fallbacks.add(new ScoredRecommendation(titleId, topView.getWeeklyViews().doubleValue(), window.reason()));
+                    if (fallbacks.size() >= limit) {
+                        break;
+                    }
                 }
             }
         }
 
-        if (fallbackByTitle.isEmpty()) {
-            return List.of();
+        return fallbacks;
+    }
+
+    private List<PersonalRecommendationResponse> enrichWithTitleInfo(List<ScoredRecommendation> recommendations) {
+        if (recommendations.isEmpty()) {
+            return Collections.emptyList();
         }
 
-        var titleInfoById = titlePublicQueryApi.getTitleShortInfoByIds(fallbackByTitle.keySet()).stream()
-                .collect(Collectors.toMap(TitleShortInfo::id, titleInfo -> titleInfo));
+        Set<UUID> titleIdsToEnrich = recommendations.stream()
+                .map(ScoredRecommendation::titleId)
+                .collect(Collectors.toSet());
 
-        return fallbackByTitle.values().stream()
+        Map<UUID, TitleShortInfo> titleInfoById = titlePublicQueryApi.getTitleShortInfoByIds(titleIdsToEnrich).stream()
+                .collect(Collectors.toMap(TitleShortInfo::id, Function.identity()));
+
+        return recommendations.stream()
                 .map(scored -> {
-                    var titleInfo = titleInfoById.get(scored.titleId());
-                    if (titleInfo == null) {
-                        return null;
-                    }
-
-                    return new PersonalRecommendationResponse(
-                            titleInfo.id(),
-                            titleInfo.name(),
-                            titleInfo.slug(),
-                            scored.score(),
-                            scored.reason()
-                    );
+                    var info = titleInfoById.get(scored.titleId());
+                    return info != null ? new PersonalRecommendationResponse(
+                            info.id(), info.name(), info.mainCoverMediaId(), info.slug(), scored.score(), scored.reason()
+                    ) : null;
                 })
                 .filter(Objects::nonNull)
                 .toList();
     }
 
     private List<UUID> getRecentViewedTitleIds(UUID userId) {
-        var recentTargets = userInteractionRepository.findRecentTargetIds(
-                userId,
-                InteractionType.TITLE_VIEWED,
-                PageRequest.of(0, RECENT_HISTORY_LIMIT * 3)
-        );
-
-        return new ArrayList<>(new LinkedHashSet<>(recentTargets))
-                .stream()
+        return userInteractionRepository.findRecentTargetIds(
+                        userId,
+                        InteractionType.TITLE_VIEWED,
+                        PageRequest.of(0, RECENT_HISTORY_LIMIT * 3)
+                ).stream()
+                .distinct()
                 .limit(RECENT_HISTORY_LIMIT)
                 .toList();
-    }
-
-    private static int countOverlap(Set<UUID> left, Set<UUID> right) {
-        var overlap = 0;
-        for (var tagId : left) {
-            if (right.contains(tagId)) {
-                overlap++;
-            }
-        }
-        return overlap;
-    }
-
-    private static boolean hasOverlap(Set<UUID> left, Set<UUID> right) {
-        for (var tagId : left) {
-            if (right.contains(tagId)) {
-                return true;
-            }
-        }
-        return false;
     }
 
     private record ScoredRecommendation(UUID titleId, double score, String reason) {
